listing/panel.css
/* light mode */
@media (prefers-color-scheme: light) {
    :root {
        --primary: #111;
        --secondary: #eee;
        --border: #333;
    }
}

/* dark mode */
@media (prefers-color-scheme: dark) {
    :root {
        --primary: #eee;
        --secondary: #111;
        --border: #bbb;
    }
}

/* global colors */
:root {
	--purple: #7239ea;
	--green: #50cd89;
	--blue: #3e97ff;
	--yellow: #ffc700;
	--red: #f1416c;
}

html {
	font-size: 62.5%;
	box-sizing: border-box;
	height: -webkit-fill-available;
    color-scheme: light dark;
}

*,
::after,
::before {
	box-sizing: inherit;
}

body {
	font-family: sf pro text, sf pro icons, helvetica neue, helvetica, arial, sans-serif;
	font-size: 1.6rem;
	line-height: 1.65;
	word-break: break-word;
	font-kerning: auto;
	font-variant: normal;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	text-rendering: optimizeLegibility;
	hyphens: auto;
	height: 100vh;
	height: -webkit-fill-available;
	max-height: 100vh;
	max-height: -webkit-fill-available;
	margin: 0;

	color: var(--primary);
    background: var(--secondary);
}

::selection {
	background: color-mix(in srgb, var(--green) 50%, transparent 50%);
}

::-moz-selection {
	background: color-mix(in srgb, var(--green) 50%, transparent 50%);
}

a {
	cursor: pointer;
	text-decoration: none;
	transition: all .1s ease-in-out;
}

a:not(a.button) {
	color: var(--blue);
}

a:not(a.button):active,
a:not(a.button):hover {
	color: color-mix(in srgb, var(--blue) 75%, white 25%);
}

a.button {
	color: white;
	font-weight: 600;
	background-color: var(--blue);
	border-radius: 0.5rem;
	padding: 0.2rem 0.7rem;
}

a.button:active,
a.button:hover {
	background-color: color-mix(in srgb, var(--blue) 75%, white 25%);
}

.pill {
	color: white;
	font-weight: 400;
	background-color: var(--purple);
	border-radius: 0.5rem;
	padding: 0.1rem 0.6rem;
}

ul {
	padding: 0;
	margin-left: 1.5em;
	list-style-type: none;
}

li {
	margin-bottom: 10px;
}

ul li:before {
	content: '\02013';
}

li:before {
	display: inline-block;
	color: var(--primary);
	position: absolute;
	margin-left: -18px;
	transition: color .2s ease;
}

code {
	font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
	font-size: .92em;
}

code:after,
code:before {
	content: '`';
}

ul {
	margin-bottom: 32px;
}

h1,
h2,
h3,
h4,
h5,
p {
    margin: 0;
    padding: 0;
}

.error-title {
	font-size: 2rem;
	padding-left: 22px;
	line-height: 1.5;
	margin-bottom: 24px;
}

.error-title-guilty {
	border-left: 2px solid var(--red);
}

.error-title-innocent {
	border-left: 2px solid var(--green);
}

@media(max-width:500px) {
	.owner-error {
		display: none;
	}
}

.devinfo-container {
	border: 1px solid var(--border);
	border-radius: 4px;
	padding: 2rem;
	display: flex;
	flex-direction: column;
	margin-bottom: 32px;
}

.error-code {
	margin: 0;
	font-size: 1.6rem;
	color: var(--primary);
	margin-bottom: 1.6rem;
}

.devinfo-line {
	color: var(--border);
}

.devinfo-line code,
code,
li {
	color: var(--primary);
}

.devinfo-line:not(:last-child) {
	margin-bottom: 8px;
}

.docs-link,
.contact-link {
	font-weight: 500;
}

.note {
	padding: 8pt 16pt;
	border-radius: 5px;
	border: 1px solid var(--blue);
	font-size: 14px;
	line-height: 1.8;
	color: var(--blue);
}

.column {
	display: flex;
	flex-direction: column;
}

.row {
	display: flex;
	flex-direction: row;
}

.wrap {
	display: flex;
	flex-wrap: wrap;
}

.gapL {
	gap: 1.5rem;
}

.gapS {
	gap: 0.7rem;
}

.gapT {
	gap: 0.3rem;
}

.spacer {
	flex: 1;
}

.center {
	align-items: center;
	justify-content: center;
	text-align: center;
}

@media(max-width:500px) {
	.devinfo-container .devinfo-line code {
		margin-top: .4rem;
	}

	.devinfo-container .devinfo-line:not(:last-child) {
		margin-bottom: 1.6rem;
	}

	.devinfo-container {
		margin-bottom: 0;
	}

	.note {
		margin-top: 16px;
	}
}

/* swal */
.swal2-popup {
    background: var(--secondary) !important;
    color: var(--primary) !important;
    border: 1px solid var(--border);
}

.swal2-title,
.swal2-html-container {
    color: var(--primary) !important;
}

/* start of page structure */
body {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    align-items: center;
    min-height: 100vh;
}

header,
main,
footer {
    width: 90%;
    max-width: 1200px;
}

header {
    display: flex;
    flex-direction: column;
    gap: 0.35rem;
    align-items: center;
    justify-content: center;
    margin-bottom: 0.5rem;
    padding-bottom: 0.5rem;
    border-bottom: 1px solid var(--border);
}

main {
	position: relative;
    display: flex;
    flex-direction: column;
    gap: inherit;
    flex: 1;
	min-height: 300px;
}

footer {
    display: flex;
    flex-direction: row;
    gap: 0.35rem;
    align-items: center;
    justify-content: center;
    margin-top: 0.5rem;
    padding-top: 0.5rem;
    border-top: 1px solid var(--border);
}

nav {
	display: flex;
	flex-wrap: wrap;
	gap: 1.5rem;
	align-items: center;
	justify-content: center;
	padding: 0 0.7rem;
	margin: 0;
}

/* page loader */
#pageLoader {
    position: absolute;
    inset: 0;
    z-index: 999;

    display: flex;
    align-items: center;
    justify-content: center;

    background: color-mix(in srgb, var(--secondary) 75%, transparent 25%);
    backdrop-filter: blur(4px);

    opacity: 1;
    visibility: visible;

    transition:
        opacity 0.25s ease,
        visibility 0.25s ease;
}

#pageLoader.hidden {
    opacity: 0;
    visibility: hidden;
    pointer-events: none;
}

#pageLoader i {
    font-size: 6rem;
    color: var(--blue);
}

/* base content */
#grid {
	display: grid;
	grid-template-columns: repeat(3, 1fr);
	gap: 1rem;
}

@media (max-width: 900px) {
    #grid {
        grid-template-columns: repeat(2, 1fr);
    }
}

@media (max-width: 600px) {
    #grid {
        grid-template-columns: 1fr;
    }
}

#grid .box, #grid .box > * {
	display: flex;
	align-items: center;
	justify-content: center
}

#grid .box {
	--boxBorder: 1px solid color-mix(in srgb, var(--border) 50%, transparent 50%);
	flex-direction: column;
	gap: 0.7rem;
	border: var(--boxBorder);
	border-radius: 0.5rem;
	background-color: color-mix(in srgb, var(--secondary) 90%, var(--primary) 10%);
	transition: background 0.1s ease-in-out;
	height: 400px;
}

#grid .box .heading {
	flex-direction: row;
	width: 100%;
	border-bottom: var(--boxBorder);
	padding: 0.7rem;
	gap: 0.7rem;
}

#grid .box .heading .spacer {
	flex: 1;
	gap: 0.3rem;
	display: flex;
	flex-direction: column;
	text-align: left;
}

#grid .box .heading h3 {
	font-size: 1.5rem;
	line-height: 1.5rem;
}

#grid .box .heading i {
	font-size: 1.25rem;
	line-height: 1.25rem;
}

#grid .box .heading span {
	border-radius: 0.5rem;
	font-size: 1.25rem;
	line-height: 1.25rem;
	font-weight: 700;
	padding: 0.2rem 0.6rem;
	color: var(--secondary);
	background-color: var(--yellow);
	cursor: pointer;
}

#grid .box .body {
	flex-direction: column;
	padding: 1.25rem;
	gap: 0.3rem;
	flex: 1;
}

#grid .box .body h4 {
	font-size: 1.25rem;
	text-align: center;
}

#grid .box .body img {
	margin-bottom: 0.5rem;
	width: 200px;
	height: 200px;
	border-radius: 0.5rem;
}

#grid .box .body .stats {
	display: flex;
	flex-wrap: wrap;
	align-items: center;
	justify-content: center;
	gap: 1.2rem;
}

#grid .box .body .stats * {
	font-size: 1.1rem;
	text-align: center;
}

#grid .box .footing {
	flex-direction: row;
	width: 100%;
	border-top: var(--boxBorder);
	padding: 0.7rem;
	gap: 1rem;
}

#grid .box:hover,
#grid .box:active {
	background-color: color-mix(in srgb, var(--secondary) 80%, var(--primary) 20%);
}

#modalblock {
    position: fixed;
    inset: 0;
    background: rgba(0,0,0,0.7);
    backdrop-filter: blur(4px);
    z-index: 10;

    opacity: 0;
    visibility: hidden;
    transition: opacity 0.2s ease, visibility 0.2s ease;
}

#modal {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%) scale(0.95);

    width: min(1400px, calc(100vw - 4rem));
    height: min(90vh, calc(100vh - 4rem));

    background: var(--secondary);
    color: var(--primary);

    border: 1px solid var(--border);
    border-radius: 0.7rem;

    z-index: 15;
    overflow: hidden;

    opacity: 0;
    visibility: hidden;

    transition:
        opacity 0.2s ease,
        transform 0.2s ease,
        visibility 0.2s ease;

    box-shadow: 0 0 40px rgba(0,0,0,0.4);

	max-width: 1100px;
}

#modal.active,
#modalblock.active {
    opacity: 1;
    visibility: visible;
}

#modal.active {
    transform: translate(-50%, -50%) scale(1);
}

#modal .header {
    padding: 1.6rem;
    border-bottom: 1px solid var(--border);
    flex-shrink: 0;
	width: 100%;
}

#modal .body {
    padding: 1.6rem;
	padding-top: 0rem;
    overflow-y: auto;
    flex: 1;
    min-height: 0;
	width: 100%;
	font-size: 1.25rem;
}


#modal [modal-item] {
	font-size: 1.25rem;
	min-height: 1.25rem;
}

#modal .detail {
	padding: 1.5rem;
	border: 1px dashed color-mix(in srgb, var(--border) 50%, transparent 50%);
	border-radius: 0.7rem;
}

#modal h3 {
	font-size: 1.75rem !important;
	font-weight: 700 !important;
	width: 100%;
	text-align: left;
}

#modal img[modal-item="Product_Image"] {
    width: 240px;
    max-width: 100%;
    border-radius: 1rem;
    border: 1px solid var(--border);
}

#modal .footer {
    padding: 1.6rem;
    border-top: 1px solid var(--border);
    flex-shrink: 0;
	width: 100%;
}

#modal [modal-action="close"] {
    cursor: pointer;
    font-size: 2.4rem;
    transition: opacity 0.15s ease;
}

#modal [modal-action="close"]:hover {
    opacity: 0.7;
}

